# Quetzalbot

./: .dockerignore  .gitignore  Dockerfile  README.md  backend.py  build_ecr.sh  compose.yaml  dom.py  healer.py  logger.py  main.py  pyproject.toml  pytest.ini  report.py  reports.html  requirements.txt  run.py  sample2.html  self_heal_report.db  self_heal_report.txt  test.py  test_musicboxd.py  test_sample.py  test_simple.py  webdriver.py
api/: dashboard.html.jinja2  database_handling.py  db.py  demoreports.html  main.py  models.py  random_forest.py  settings.py  utils.py
api/migrations/: env.py
api/migrations/versions/: 0124d644a4a2_hola.py  b2297a65dd9b_fk_element.py  cada03d64d21_your_message.py  e34b4761500c_foreign_keys.py
api/styles/: style2.css
backends/: __init__.py  backend.py  base.py  local.py  remote.py
chart/: Chart.yaml  values.yaml
chart/templates/: deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
healers/: __init__.py  dom.py  fuzzy.py  healer.py  random_forest.py  test_dom.py  test_healer.py
infra/: .terraform.lock.hcl  bucket.tf  ecr.tf  eks.tf  locals.tf  providers.tf  rds.tf  route53.tf  vpc.tf
infra/manifests/: external-dns.yaml  fenix.yaml  nginx.yaml
utils/: __init__.py  dom.py  test_dom.py
