[tool.poetry]
name = "qa-framework"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.18.1"
beautifulsoup4 = "^4.12.3"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.25.0"
colorlog = "^6.8.2"
fastapi = "^0.111.0"
sqlmodel = "^0.0.18"
jinja2 = "^3.1.4"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.22.1"
black = "^24.2.0"
pytest = "^8.0.2"
alembic = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
