[tool.isort]
profile = "black"

[autoflake]
remove_all_unused_imports = true
in_place = true
recursive = true
quiet = true


[tool.poetry]
name = "qa-framework"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.21.0"
beautifulsoup4 = "^4.12.3"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.25.1"
colorlog = "^6.8.2"
fastapi = "^0.111.0"
sqlmodel = "^0.0.18"
jinja2 = "^3.1.4"
pandas = "^2.2.2"
coverage = "^7.5.1"
pillow = "^10.3.0"
boto3 = "^1.34.112"
requests = "^2.32.2"
uvicorn = "^0.30.1"
pydantic-settings = "^2.3.1"
psycopg2-binary = "^2.9.9"
numpy = "^1.26.4"
scikit-learn = "^1.5.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.22.1"
black = "^24.2.0"
pytest = "^8.0.2"
alembic = "^1.13.1"
isort = "^5.13.2"
coverage = "^7.5.1"
pytest-xdist = "^3.6.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
